<resources>
    <string name="app_name">LJN fast &amp; safe</string>
    <string name="name_toyota_corolla">Toyota Corolla</string>
    <string name="desc_toyota_corolla">Imagen del Toyota Corolla</string>
    <string name="precio_corolla">$16,500</string>
    <string name="btn_reservar">Reservar vehículo</string>
    <string name="btn_contactar">Contactar vendedor</string>
    <string name="btn_ver_detalle">Ver Detalle de Vehículo</string>
    <string name="oferta_mensual">OFERTA MENSUAL</string>
    <string name="titulo_especificaciones">Especificaciones Técnicas</string>
    <string name="label_anio">Año:</string>
    <string name="label_km">Kilómetros:</string>
    <string name="label_combustible">Combustible:</string>
    <string name="label_transmision">Transmisión:</string>
    <string name="label_color">Color:</string>
    <string name="val_anio_corolla">2023</string>
    <string name="val_km_corolla">15,000 km</string>
    <string name="val_combustible_corolla">Híbrido</string>
    <string name="val_transmision_corolla">Automática</string>
    <string name="val_color_corolla">Burdeo</string>
    <string name="titulo_otros_vehiculos">Otros Vehículos Disponibles</string>
    <string name="nombre_coche_2">Hyundai Tucson</string>
    <string name="nombre_coche_3">Seat León</string>
    <string name="nombre_coche_4">Kia Sportage</string>
    <string name="btn_login">Login</string>
    <string name="desc_logo_app">Logo de LJN Fast Safe</string>
    <string name="precio_coche_2">$22,000</string>
    <string name="precio_coche_3">$15,800</string>
    <string name="precio_coche_4">$19,000</string>
    <string name="estado_disponible">Disponible</string>
    <string name="estado_reservado">Reservado</string>
    <string name="app_name_text">Fast &amp; Safe</string>
    <string name="desc_fav">Favorito</string>
    <string name="btn_back">Volver</string>
    <string name="no_coches_encontrados">No se encontraron vehículos en la DB</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_entrar">Entrar</string>
    <string name="not_registered">¿No tienes cuenta? </string>
    <string name="title_register">Crear Cuenta</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_apellido">Apellido</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="already_have_account">¿Ya tienes cuenta? Inicia sesión</string>
</resources>